buildscript {
	ext {
		springBootVersion = '2.2.6.RELEASE'
	}
	repositories {
		maven { url '' }
		mavenLocal()
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

plugins {
	id 'org.springframework.boot' version '2.2.6.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
}

group = 'com.robin.life'
version = '1.0.0'
sourceCompatibility = '1.8'

repositories {
	mavenCentral()
}

dependencies {
	implementation ('org.springframework.boot:spring-boot-starter-web') {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}

	annotationProcessor 'org.projectlombok:lombok:1.18.2'
	compileOnly 'org.projectlombok:lombok:1.18.2'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.2'
	testCompileOnly 'org.projectlombok:lombok:1.18.2'
	compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
	compile 'org.springframework.boot:spring-boot-starter-log4j2'
	compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
	compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.1'
}

test {
	useJUnitPlatform()
}
